# stamp-assist

./: .env.demo  .gitignore  Dockerfile  colnect_links.txt  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml
accounts/: models.py
accounts/migrations/: 0001_initial.py  0002_user_max_value_user_stamps_count_user_target_value.py  0003_user_allow_stamp_repeat.py  0004_alter_user_managers.py  0005_alter_user_managers.py  0006_alter_user_managers.py  0007_alter_user_managers.py  0008_user_stamps_max_user_stamps_min.py  0009_remove_user_stamps_count.py
combinations/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
combinations/migrations/: 0001_initial.py  0002_remove_stamp_collection_stampblock.py  0003_alter_stampblock_collection.py  0004_desk_stamp_desk.py  0005_stampsample_userstamp_remove_stamp_name_and_more.py  0006_stampsample_image.py  0007_alter_stampsample_image.py  0008_alter_userstamp_comment.py  0009_remove_userstamp_quantity.py  0010_alter_userstamp_unique_together.py  0011_desk_type.py  0012_alter_desk_user.py  0013_remove_stampcollection_user_userstamp_user_name_and_more.py  0014_rename_user_name_userstamp_custom_name.py  0015_alter_userstamp_desk.py  0016_userstamp_allow_repeat.py  0017_alter_userstamp_user.py  0018_stampsample_url_alter_desk_type.py  0019_stampsample_slug.py  0020_alter_stampsample_slug.py  0021_alter_stampsample_url.py
stamp_assist/: asgi.py  settings.py  urls.py  wsgi.py
templates/base/: base.html
templates/combinations/: combinations.html  index.html  (+6 more)
(+11 files in other folders)
