[tool.poetry]
name = "stamp-assist"
version = "0.1.0"
description = ""
authors = ["Sergey Petrin"]
packages = [{include = "stamp_assist"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.1"
django-environ = "^0.10.0"
pytest-django = "^4.5.2"
beautifulsoup4 = "^4.12.2"
requests = "^2.31.0"
pillow = "^9.5.0"
imagekitio = "^3.0.1"
urllib3 = "1.26.16"
django-feather = "^0.3.0"
mimesis = "^10.1.0"
psycopg = {extras = ["binary"], version = "^3.1.17"}
gunicorn = "^21.2.0"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "stamp_assist.settings"
python_files = ["test_*.py", "*_test.py", "tests.py"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
